Stop issue with caseload grade codes not aligning to centre

--- a/app/assets/sass/_wmt/_wmt-data-table.scss
+++ b/app/assets/sass/_wmt/_wmt-data-table.scss
@@ -29,6 +29,10 @@ table.data-table tr td:not(:first-child) {
     text-align: center;
 }
 
+table.data-table tr td.align-centre{
+    text-align: center;
+}
+
 table.data-table tr:nth-child(odd){
     padding: 10px 5px;
 }
